# census_tool

./: .env  .gitignore  ANALYSIS_SESSION_ISSUES.md  CONTEXT_PARSING_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  TEST_PROGRESS.md  USAGE_GUIDE.md  agent_example2.ipynb  agent_example3.ipynb  analyze_api_calls.py  app.py  check_b01003.py  checkpoints.db  checkpoints.db-shm  checkpoints.db-wal  config.py  disable_heavy_extensions.ps1  extension_resource_monitor.ps1  fix_cursor_tabs.ps1  fix_tabs_simple.ps1  force_restart_cursor.ps1  graph_compilation.py  launcher.py  main.py  open_multiple_files.ps1  process_counties.py  pyproject.toml  pytest.ini  rebuild_vars_index.py  requirements.txt  sketch.py  sketch2.py  sketch3.py  streamlit_app.py  tatus  test_all_questions.py  test_app_retrieval.py  test_b01003_match.py  test_cache_performance.py  (+25 more)
.release_notes/: RELEASE_NOTES_v0.0.1.md
app_description/: 2023_acs_acs5_examples.md  AGENT-IMPLEMENTATION-ROADMAP.md  ANALYSIS-SUMMARY.md  ARCHITECTURE-REMEDIATION-ROADMAP.md  ARCHITECTURE.md  CENSUS_DISCUSSION.md  DETAIL_PROFILES.md  FIX-REGRESSION.md  IMPLEMENTATION-TEMPLATES.md  LLM-Implementation_Phase3.md  PARSING_FIX_SUMMARY.md  PHASE7.md  PHASE8-ChromaDB-Architecture-Fix.md  PHASE9-Census-API-Flexibility-Analysis.md  QA_CHECKLIST.md  QUICK-REFERENCE.md  README-REMEDIATION.md  SUBJECT_TABLES.md  THE_PLAN.md  THE_PLAN2.md  UNUSED_FILES_REPORT.md  census_app.md  geography.md  geography2.md  geography_completion_status.md  refining_phase2.md
app_test_scripts/: README.md  test_agent_fallback.py  test_app_integration.py  (+32 more)
(+155 files in other folders)
