[project]
name = "census-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.21",
    "ddgs>=9.5.5",
    "duckduckgo-search>=8.1.1",
    "future>=1.0.0",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-prebuilt>=0.6.4",
    "langgraph-sdk>=0.2.6",
    "langsmith>=0.4.27",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
    "tavily-python>=0.7.11",
    "tensorflow>=2.20.0",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
